--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <img class= "draw" id="skills-draw" src="img/man_working.png">
                     <p class="draw-legend">Illustration by  <a href="https://iradesign.io">IRA Design</a> </p>
                     </div>
-                    <div class="arrow-container-skills">
+                    <div class="arrow-container">
                       <i class="fa-solid fa-down-long" class="arrow"></i>
                       </div>
                    
