--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                 
             </a>
 
-            <p class="copyright">&copy Copyright Daniel Larrota Rincón - 2022</p>
+            <p class="copyright">&copy Daniel Larrota Rincón - 2022</p>
         </footer>
         
 
