--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   </a>
 
 
-                  <a class="icon-div">
+                  <a class="icon-div" id="cv-download" href="daniel_larrota_cv_en.pdf">
                     <i class="fa-solid fa-download"></i>
                     CV
                 </a>
