--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width"> 
-        <title>Daniel Larrota</title>
+        <title> My portfolio! -- Daniel Larrota Rincón</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
