--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
+
+        <meta property="og:title" content="Welcome to my portfolio! -- Daniel Larrota Rincón" />
+        <meta property="og:description" content="Explore my latest projects and get in touch!" />
+        <meta property="og:image" src="img/projects/portfolio.png" width="40px" border-radius="15px">
+
         
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
