--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <meta property="og:title" content="Welcome to my portfolio! -- Daniel Larrota Rincón" />
         <meta property="og:description" content="Explore my latest projects and get in touch!" />
-        <meta property="og:image" src="img/projects/portfolio.png" width="40px" border-radius="15px">
+        <meta property="og:image" content="https://i.postimg.cc/mZqJnqqS/portfolio.png">
 
         
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
