--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link rel="stylesheet" href="css/style.css">
 
         <meta property="og:title" content="Welcome to my portfolio! -- Daniel Larrota Rincón" />
-        <meta property="og:description" content="Explore my latest projects and get in touch!" />
-        <meta property="og:image" content="https://i.postimg.cc/mZqJnqqS/portfolio.png">
+        <meta property="og:description" content="Explore my latest projects, background, and get in touch!" />
+        <meta property="og:image" content="https://i.postimg.cc/sfMs1bZk/portfolio.png">
 
         
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
