--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
       
     
                                 <div class="button-div">
-                                  <a href="https://github.com/dhlarrotar/my_portfolio" class="more" >
+                                  <a href="https://github.com/dhlarrotar/my_portfolio" class="more" id="more-portfolio">
                                     <i class="fa-brands fa-github"></i>
                                     <p class="ver-mas"></p>
                                   </a>
