fix visualization issues

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                                   <p  class="research-info" id="guaviare-info">Geología Colombiana vol 41 (2018)</p>
       
                                   <div class="button-div">
-                                    <a href="https://dhlarrotar.github.io/text_encryptor/" class="launch">
+                                    <a href="https://revistas.unal.edu.co/index.php/geocol/article/view/77446" class="launch">
                                       <i class="fa-solid fa-book-open-reader"></i>
                                       <p class="read"></p>
                                     </a>
