--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
               
             </a>
 
-            <a href="https://www.instagram.com/dlarrotar/" class="icon-div">
+            <a href="https://www.instagram.com/dlar_geo/" class="icon-div">
                 <i class="fa-brands fa-instagram"></i>
                 
             </a>
