--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                                     <p class="research-tag1"></p>        
                                    </div>
                                   <p class="research-description"id="guaviare-authors">Larrota Rincón, D. H., & Concha Perdomo, A. E.</p>
-                                  <p class="research-title" id="guaviare-title"></p>
+                                  <h3 class="research-title" id="guaviare-title"></h3>
                                   <p  class="research-info" id="guaviare-info">Geología Colombiana vol 41 (2018)</p>
       
                                   <div class="button-div">
