--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="css/contact.css">
 
 
+
+
   <meta property="og:title" content="Welcome to my portfolio! -- Daniel Larrota Rincón" />
   <meta property="og:description" content="Explore my latest projects, background, and get in touch!" />
   <meta property="og:image" content="https://i.postimg.cc/2yX8PfMY/portfolio.png">
@@ -482,8 +484,8 @@
 
 
               <h3>Oracle Next Education (ONE)</h3>
-              <p class="text-box-description" id="frontend-description"> Front-end + Java</p>
-              <p class="text-box-description" id="frontend-description">Oracle + Alura - 2022</p>
+              <p class="frontend-description"> Front-end + Java</p>
+              <p class="frontend-description">Oracle + Alura - 2022</p>
 
 
 
@@ -501,8 +503,8 @@
 
 
               <h3 id="unesco-title"></h3>
-              <p class="text-box-description" id="unesco-description"></p>
-              <p class="text-box-description" id="unesco-description">UNESCO Open Learning</p>
+              <p class="unesco-description"></p>
+              <p class="unesco-description">UNESCO Open Learning</p>
 
 
 
