--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
   <script src="https://kit.fontawesome.com/9fb909ccd9.js" crossorigin="anonymous"></script>
 
 </head>
@@ -561,7 +563,7 @@
 
 
           <div class="draw-container">
-            <img class="educationDraw" src="img/man_with_documents.png" alt="man_documents">
+            <div class="educationDraw" src="img/man_with_documents.png" alt="man_documents"></div>
             <p class="draw-legend">Illustration by <a href="https://iradesign.io">IRA Design</a> </p>
           </div>
 
