--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
 
           </div>
 
-          <!-- <div class="draw-container">
-            <img class="draw" id="about-draw" src="img/man_presenting.png" alt="man_presenting">
+          <div class="draw-container">
+            <div class="aboutDraw"></div>
             <p class="draw-legend">Illustration by <a href="https://iradesign.io">IRA Design</a> </p>
-          </div> -->
-        </div>
+          </div>
+
 
       </div>
 
@@ -563,7 +563,7 @@
 
 
           <div class="draw-container">
-            <div class="educationDraw" src="img/man_with_documents.png" alt="man_documents"></div>
+            <div class="educationDraw"></div>
             <p class="draw-legend">Illustration by <a href="https://iradesign.io">IRA Design</a> </p>
           </div>
 
