fix image error in about section

--- a/index.html
+++ b/index.html
@@ -44,34 +44,34 @@
         <ul class="menu">
 
           <li><a href="#home" class="active" id="home-button">
-            <!-- <i class="fa-solid fa-house"></i> -->
+              <!-- <i class="fa-solid fa-house"></i> -->
               <p class="home-title"></p>
             </a></li>
 
           <li><a href="#about" id="about-button">
-            <!-- <i class="fa-solid fa-user"></i> -->
+              <!-- <i class="fa-solid fa-user"></i> -->
               <p class="about-title"></p>
             </a></li>
           <li><a href="#skills" id="skills-button">
-            <!-- <i class="fa-solid fa-dumbbell"></i> -->
+              <!-- <i class="fa-solid fa-dumbbell"></i> -->
               <p class="skills-title"></p>
             </a></li>
           <li><a href="#education" id="education-button">
-            <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
               <p class="education-title"></p>
             </a></li>
           <li><a href="#projects" id="projects-button">
-            <!-- <i class="fa-solid fa-suitcase"></i> -->
+              <!-- <i class="fa-solid fa-suitcase"></i> -->
               <p class="projects-title"></p>
             </a></li>
           <li></i><a href="#contact" id="contact-button">
-            <!-- <i class="fa-solid fa-envelope"></i> -->
+              <!-- <i class="fa-solid fa-envelope"></i> -->
               <p class="contact-title"></p>
             </a></li>
-            <li class="headerButton" id="headerMenuShow">   <i class="fa-solid fa-caret-down"></i></li>
-            <li class="headerButton" id="headerMenuHide">   <i class="fa-solid fa-caret-up"></i></li>
+          <li class="headerButton" id="headerMenuShow"> <i class="fa-solid fa-caret-down"></i></li>
+          <li class="headerButton" id="headerMenuHide"> <i class="fa-solid fa-caret-up"></i></li>
         </ul>
-     
+
 
       </nav>
 
@@ -79,55 +79,55 @@
 
 
 
+      <div class="settingsContainer">
+        <ul class="settingsList">
+          <li class="settingsItem">
 
-      <ul class="settingsContainer">
-        <li class="settingsItem">
+            <ul class="theme-button">
+              <li>
+                <p id="theme"></p>
+              </li>
+              <li>
+                <input type="checkbox" id="switch" title="lang-check-box" />
+                <label for="switch">
+                  <i class="fas fa-sun"></i>
+                  <i class="fas fa-moon"></i>
+                  <span class="ball"></span>
 
-          <ul class="theme-button">
-            <li>
-              <p id="theme"></p>
-            </li>
-            <li>
-              <input type="checkbox" id="switch" title="lang-check-box" />
-              <label for="switch">
-                <i class="fas fa-sun"></i>
-                <i class="fas fa-moon"></i>
-                <span class="ball"></span>
-
-              </label>
-            </li>
-
-
-
-          </ul>
-
-        </li>
-
-        <li class="settingsItem">
+                </label>
+              </li>
 
 
-          <ul class="lang-button">
-            <li>
-              <p id="lang-text"></p>
-            </li>
+
+            </ul>
+
+          </li>
+
+          <li class="settingsItem">
 
 
-            <li>
-
-              <select class="lang-list" title="lang-list">
-                <option value=en class="language" id="en">EN</option>
-                <option value=es class="language" id="es">ES</option>
-              </select>
+            <ul class="lang-button">
+              <li>
+                <p id="lang-text"></p>
+              </li>
 
 
-            </li>
+              <li>
 
-          </ul>
+                <select class="lang-list" title="lang-list">
+                  <option value=en class="language" id="en">EN</option>
+                  <option value=es class="language" id="es">ES</option>
+                </select>
 
 
-        </li>
-      </ul>
+              </li>
 
+            </ul>
+
+
+          </li>
+        </ul>
+      </div>
 
 
 
@@ -314,7 +314,7 @@
           </div>
 
 
-      </div>
+        </div>
 
     </section>
 
