--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 
 
     <section id="projects">
-      <div class="container reveal fade-right">
+      <div class="container reveal fade-bottom">
 
 
 
