section visualization issues fixed

--- a/index.html
+++ b/index.html
@@ -197,90 +197,88 @@
 
       <section id="home">
 
-        <!-- <div  class="fade-out" class="photoInfoContainer">
-        <p class="apodTitle"></p>
-        <p class="apodCopy"></p>
-        <p class="apodDate"></p>
-        <p  class="apodPhoto"></p>
-        <p  class="apodExplanation"></p>
-
-      </div> -->
-
 
 
         <div class="container reveal fade-bottom">
 
-
-          <div class="home_container">
-
-
+          <div>
+            <div class="home_container">
 
 
 
-            <div class="greetingContainer">
-
-              <ul class="greetingLines">
-
-                <li>
-                  <p class="greeting" id="hi"></p>
-
-                </li>
-                <li>
-                  <h1 class="title" id="myname"></h1>
-
-                </li>
-                <li>
-                  <p class="personalDescription" id="mytitle"></p>
 
 
-                </li>
+              <div class="greetingContainer">
+
+                <ul class="greetingLines">
+
+                  <li>
+                    <p class="greeting" id="hi"></p>
+
+                  </li>
+                  <li>
+                    <h1 class="title" id="myname"></h1>
+
+                  </li>
+                  <li>
+                    <p class="personalDescription" id="mytitle"></p>
 
 
-              </ul>
+                  </li>
+
+
+                </ul>
 
 
 
-              <ul class="home__social-section">
-                <li class="socialItem"> <a href="https://www.linkedin.com/in/dhlarrotar/">
-                    <i class="fa-brands fa-linkedin"></i>
-                    <p>LinkedIn</p>
-                  </a>
-                </li>
+                <ul class="home__social-section">
+                  <li class="socialItem"> <a href="https://www.linkedin.com/in/dhlarrotar/">
+                      <i class="fa-brands fa-linkedin"></i>
+                      <p>LinkedIn</p>
+                    </a>
+                  </li>
 
-                <li class="socialItem"> <a href="https://github.com/dhlarrotar">
-                    <i class="fa-brands fa-github"></i>
-                    <p>GitHub</p>
-                  </a>
-                </li>
+                  <li class="socialItem"> <a href="https://github.com/dhlarrotar">
+                      <i class="fa-brands fa-github"></i>
+                      <p>GitHub</p>
+                    </a>
+                  </li>
 
-                <li class="socialItem"> <a href="https://www.instagram.com/dlar_geo">
-                    <i class="fa-brands fa-instagram"></i>
-                    <p>Instagram</p>
-                  </a>
-                </li>
-
-
-                <li class="socialItem"> <a id="cv-download" href="daniel_larrota_cv_en.pdf">
-                    <i class="fa-solid fa-download"></i>
-                    <p>CV</p>
-                  </a>
-                </li>
+                  <li class="socialItem"> <a href="https://www.instagram.com/dlar_geo">
+                      <i class="fa-brands fa-instagram"></i>
+                      <p>Instagram</p>
+                    </a>
+                  </li>
 
 
-              </ul>
+                  <li class="socialItem"> <a id="cv-download" href="daniel_larrota_cv_en.pdf">
+                      <i class="fa-solid fa-download"></i>
+                      <p>CV</p>
+                    </a>
+                  </li>
+
+
+                </ul>
+              </div>
+
+
+
+
+
+              <div class="photoContainer">
+                <div class="photoContainer__draw">
+                  
+                </div>
+               
+              </div>
+
+
+
             </div>
-
-
             <div class="arrowContainer">
               <i class="fa-solid fa-circle-arrow-down"></i>
             </div>
-            <!-- 
-          <div class="home__drawContainer">
-            <div class="home__drawContainer__draw" ></div> 
-            <p class="draw-legend">Illustration modified from <a
-                href="https://icons8.com/illustrations/author/o43Gv9Q60NW0">Dmitry Nikulnikov</a>, <a
-                href="https://icons8.com/illustrations">Ouch!</a></p>
-          </div> -->
+
           </div>
 
         </div>
@@ -821,6 +819,71 @@
 
 
 
+                <div class="projectsItem">
+                  <div class="volcanoesmapImg">
+                    <div class="box">
+                      <h3 class="volcanoesmap"></h3>
+                    </div>
+
+                  </div>
+
+
+
+                  <div class="projectsItem__iconsContainer">
+
+                    <div class="projectsItem__info">
+                      <h3 class="volcanoesmap"></h3>
+                      <p class="projectsItem__description" id="volcanoesmap-description"></p>
+                    </div>
+
+                    <ul class="usedTech">
+                      <li class="projectsItem__iconItem">
+                        <i class="fa-brands fa-html5"></i>
+                        JavaScript
+                      </li>
+
+                      <li class="projectsItem__iconItem">
+                        <i class="fa-brands fa-js-square"></i>
+
+                        Leaflet
+                      </li>
+
+                      <li class="projectsItem__iconItem">
+                        <i class="fa-brands fa-css3"></i>
+
+                        CSS3
+                      </li>
+
+                    </ul>
+
+
+
+
+
+
+                    <div class="projectsItem__buttonContainer">
+
+                      <ul>
+                        <li>
+                          <a href="https://dhlarrotar.github.io/world_volcanoes_map/" class="launch">
+                            <i class="fa-solid fa-rocket"></i>
+                            <p class="probar"></p>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="https://github.com/dhlarrotar/world_volcanoes_map" class="more">
+                            <i class="fa-brands fa-github"></i>
+                            <p class="ver-mas"></p>
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
 
                 <!-- 
               <div class="projectsItem">
@@ -958,7 +1021,7 @@
     <script src="js/set-language.js"></script>
   </div>
 
-  <div class=""container reveal fade-bottom">
+  <div class="" container reveal fade-bottom">
     <div class="loader"></div>
   </div>
 
