--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
   <meta property="og:image" content="https://i.postimg.cc/2yX8PfMY/portfolio.png">
 
 
+
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+  <script type='text/javascript' charset='utf-8'>
+      // Hides mobile browser's address bar when page is done loading.
+        window.addEventListener('load', function(e) {
+          setTimeout(function() { window.scrollTo(0, 1); }, 1);
+        }, false);
+  </script>
+
+
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
