--- a/index.html
+++ b/index.html
@@ -26,13 +26,8 @@
 
 
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-  <script type='text/javascript' charset='utf-8'>
-      // Hides mobile browser's address bar when page is done loading.
-        window.addEventListener('load', function(e) {
-          setTimeout(function() { window.scrollTo(0, 1); }, 1);
-        }, false);
-  </script>
+  <meta name="mobile-web-app-capable" content="yes">
+ 
 
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
