--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
 
         </a>
       </div>
-      <p class="copyright">&copy Daniel Larrota Rincón - 2022</p>
+      <p class="copyright">&copy Daniel Larrota R  · 2022</p>
     </footer>
 
 
