loader issue  fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body onload="loadWebsite()">
+<body>
   <div class="bodyContent">
     <header class="headerPrincipal">
       <div class="container">
