--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,9 @@
   </div>
 
   <div class="" container reveal fade-bottom">
-    <div class="loader"></div>
+    <div class="loader">
+      <div class="spinner"></div>
+    </div>
   </div>
 
 </body>
