--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <li>
 
                   <select class="lang-list" title="lang-list">
-                    <option value=en class="language" id="en">EN</option>
-                    <option value=es class="language" id="es">ES</option>
+                    <option value=en class="language" id="en">English</option>
+                    <option value=es class="language" id="es">Español</option>
                   </select>
 
 
