--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
 
                       <ul>
                         <li>
-                          <a href="https://dhlarrotar.github.io/world_volcanoes_map/" class="launch">
+                          <a href="https://worldvolcanoesmap.netlify.app/" class="launch">
                             <i class="fa-solid fa-rocket"></i>
                             <p class="probar"></p>
                           </a>
@@ -747,7 +747,7 @@
 
                       <ul>
                         <li>
-                          <a href="https://dhlarrotar.github.io/hang_man/" class="launch">
+                          <a href="https://hang-man.netlify.app/" class="launch">
                             <i class="fa-solid fa-rocket"></i>
                             <p class="probar"></p>
                           </a>
@@ -817,7 +817,7 @@
 
                       <ul>
                         <li>
-                          <a href="https://dhlarrotar.github.io/text_encryptor/" class="launch">
+                          <a href="https://textencryptor.netlify.app/" class="launch">
                             <i class="fa-solid fa-rocket"></i>
                             <p class="probar"></p>
                           </a>
