--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                   </li>
 
 
-                  <li class="socialItem"> <a id="cv-download" href="daniel_larrota_cv_en.pdf">
+                  <li class="socialItem"> <a id="cv-download" href="Daniel_Larrota_Rincón_dev_en.pdf">
                       <i class="fa-solid fa-download"></i>
                       <p>CV</p>
                     </a>
