Projects sections improved

--- a/index.html
+++ b/index.html
@@ -271,6 +271,12 @@
                     </a>
                   </li>
 
+                  <li class="socialItem"> <a href="https://www.researchgate.net/profile/Daniel-Larrota-Rincon">
+                      <i class="fa-brands fa-researchgate"></i>
+                      <p>ResearchGate</p>
+                    </a>
+                  </li>
+
 
                   <li class="socialItem"> <a id="cv-download" href="Daniel_Larrota_Rincón_dev_en.pdf">
                       <i class="fa-solid fa-download"></i>
@@ -615,13 +621,13 @@
             <h2 class="projects-title"></h2>
 
 
-            <!-- <nav class="projects-grid__menu">
-            <ul>
-              <li class="projects-grid__menu__link" id="web-design-button"></li>
-              <li class="projects-grid__menu__link" id="research-button"></li>
+            <nav class="projects__menu">
+              <ul>
+                <li><a id="projectsWeb-button"></a> </li>
+                <li><a id="research-button"></a> </li>
 
-            </ul>
-          </nav> -->
+              </ul>
+            </nav>
 
 
 
@@ -633,7 +639,7 @@
 
               <!--Hangman-->
 
-              <div>
+              <div class="projectsGallery">
 
                 <div class="projectsItem">
                   <div class="volcanoesmapImg">
@@ -906,41 +912,41 @@
 
 
 
-
-
-
-
-                <!-- 
-              <div class="projectsItem">
-
-
-
-                <div class="projectsItem__info">
-                  <div class="tag-container">
-                    <p class="research-tag1"></p>
-                  </div>
-                  <p class="research-description" id="guaviare-authors">Larrota Rincón, D. H., & Concha Perdomo, A.
-                    E.
-                  </p>
-                  <h3 class="research-title" id="guaviare-title"></h3>
-                  <p class="research-info" id="guaviare-info">Geología Colombiana vol 41 (2018)</p>
-
-                  <div class="projectsItem__buttonContainer">
-                    <a href="https://revistas.unal.edu.co/index.php/geocol/article/view/77446" class="launch">
-                      <i class="fa-solid fa-book-open-reader"></i>
-                      <p class="read"></p>
-                    </a>
-
-
-                  </div>
-                </div> -->
-
-
-
-
-
               </div>
 
+
+
+              <div class="researchGallery">
+                <div class="projectsItem">
+
+
+
+                  <div class="researchItem__info">
+                    <div class="tag-container">
+                      <p class="research-tag1"></p>
+                    </div>
+                    <p class="research-description" id="guaviare-authors">Larrota Rincón, D. H., & Concha Perdomo, A.
+                      E.
+                    </p>
+                    <p class="research-title" id="guaviare-title"></p>
+                    <p class="research-info" id="guaviare-info">Geología Colombiana vol 41 (2021)</p>
+
+                    <div class="projectsItem__buttonContainer">
+                      <a href="https://revistas.unal.edu.co/index.php/geocol/article/view/77446" class="launch">
+                        <i class="fa-solid fa-book-open-reader"></i>
+                        <p class="read"></p>
+                      </a>
+
+
+                    </div>
+                  </div>
+
+
+
+
+
+                </div>
+              </div>
 
 
 
@@ -954,7 +960,7 @@
 
 
 
-            </div>
+
 
 
 
@@ -1032,7 +1038,7 @@
 
         </a>
       </div>
-      <p class="copyright">&copy Daniel Larrota R  · 2022</p>
+      <p class="copyright">&copy Daniel Larrota R · 2022</p>
     </footer>
 
 
@@ -1042,7 +1048,7 @@
       </div>
     </div>
     <!-- <script src="js/apod-request.js"></script> -->
-    
+
     <script src="js/loader.js"></script>
     <script src="js/data.js"></script>
     <script src="js/form-validation.js"></script>
@@ -1051,7 +1057,7 @@
     <script src="js/set-language.js"></script>
   </div>
 
- 
+
 
 </body>
 
