header issue fixed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 <!-- <i class="fa-solid fa-envelope"></i> -->
                 <p class="contact-title"></p>
               </a></li>
-            <li class="headerButton" id="headerMenuShow"> <i class="fa-solid fa-caret-down"></i></li>
+    
+            <li class="headerButton" id="headerMenuShow"> <i class="fa-solid fa-gear"></i></li>
             <li class="headerButton" id="headerMenuHide"> <i class="fa-solid fa-caret-up"></i></li>
           </ul>
 
