--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
                   </li>
 
 
-                  <li class="socialItem"> <a id="cv-download" href="Daniel_Larrota_Rincón_dev_en.pdf">
+                  <!-- <li class="socialItem"> <a id="cv-download" href="Daniel_Larrota_Rincón_dev_en.pdf">
                       <i class="fa-solid fa-download"></i>
                       <p>CV</p>
                     </a>
-                  </li>
+                  </li> -->
 
 
                 </ul>
