--- a/index.html
+++ b/index.html
@@ -274,6 +274,13 @@
                   </li>
 
 
+                  <li class="socialItem"> <a href="https://www.instagram.com/dlar_geo/">
+                    <i class="fa-brands fa-instagram"></i>
+                    <p>Instagram</p>
+                  </a>
+                </li>
+
+
                   <!-- <li class="socialItem"> <a id="cv-download" href="Daniel_Larrota_Rincón_dev_en.pdf">
                       <i class="fa-solid fa-download"></i>
                       <p>CV</p>
