--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   </li>
 
 
-                  <li class="socialItem"> <a href="https://www.instagram.com/dlar_geo/">
+                  <li class="socialItem"> <a href="https://www.instagram.com/dlar.geo/">
                     <i class="fa-brands fa-instagram"></i>
                     <p>Instagram</p>
                   </a>
@@ -380,9 +380,10 @@
                 <h3 id="skillsItem__title2"> GIS & Data Analysis</h3>
                 <ul>
                   <li> ArcGIS · QGIS</li>
+                  <li>Google Earth Engine</li>
                   <li>Python</li>
-                  <li>Leaflet</li>
-                  <li>SQLite</li>
+                  <li>JavaScript</li>
+                  <li>SQL</li>
 
                 </ul>
               </div>
@@ -508,6 +509,25 @@
             <h2 class="education-title"></h2>
 
             <ul class="educationList">
+
+              <li class="educationItem">
+                <div class="education__imgContainer">
+                  <img src="img/education/itc.jpg" class="educationImg" alt="itc">
+                </div>
+
+
+                <div class="educationItem__info">
+                  <h3 id="itc-title"></h3>
+                  <p class="itc-description">ITC University of Twente</p>
+                 
+
+                </div>
+
+              </li>
+
+
+
+
               <li class="educationItem">
                 <div class="education__imgContainer">
                   <img src="img/education/one.png" class="educationImg" alt="ONE logo">
@@ -527,20 +547,7 @@
 
 
 
-              <li class="educationItem">
-                <div class="education__imgContainer">
-                  <img src="img/education/unesco.png" class="educationImg" alt="UNESCO">
-                </div>
 
-
-                <div class="educationItem__info">
-                  <h3 id="unesco-title"></h3>
-                  <p class="unesco-description"></p>
-                  <p class="unesco-description">UNESCO Open Learning</p>
-
-                </div>
-
-              </li>
 
 
 
